# knowrob_collision_checking

./: CMakeLists.txt  package.xml
include/knowrob_moveit/: utils.hpp
prolog/: init.pl  knowrob_moveit.pl
src/knowrob_moveit/: prolog_predicates.cpp
